tests/NormalTests/paczka1/fuzzy1/87375834.err
Error in line 16: ?1Z"B
Error in line 18: OSmP A631 51,8
Error in line 20: OSmP A166 7,7
Error in line 23: qnyyC A631 34,6
